[gd_scene load_steps=5 format=1]

[ext_resource path="res://themes/gui.tres" type="Theme" id=1]
[ext_resource path="res://scripts/gui/encyclopedia.gd" type="Script" id=2]
[ext_resource path="res://themes/text30.tres" type="Theme" id=3]
[ext_resource path="res://scenes/gui/encyclopediaFunctions.tscn" type="PackedScene" id=4]

[node name="Control" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="tabs" type="HBoxContainer" parent="Control/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 46.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="buttonToInventory" type="Button" parent="Control/VBoxContainer/tabs"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 477.0
margin/bottom = 46.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Inventaire"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="buttonToLog" type="Button" parent="Control/VBoxContainer/tabs"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 481.0
margin/top = 0.0
margin/right = 958.0
margin/bottom = 46.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Journal"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="menuTitle" type="Label" parent="Control/VBoxContainer/tabs"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 962.0
margin/top = 3.0
margin/right = 1439.0
margin/bottom = 43.0
text = "Encyclop√©die"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="buttonToMap" type="Button" parent="Control/VBoxContainer/tabs"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 1443.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 46.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Carte"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 50.0
margin/right = 1920.0
margin/bottom = 1039.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Tree" type="Tree" parent="Control/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 954.0
margin/bottom = 989.0
__meta__ = {
"_edit_lock_": true
}

[node name="VSeparator" type="VSeparator" parent="Control/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 958.0
margin/top = 0.0
margin/right = 961.0
margin/bottom = 989.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 965.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 989.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="entryTitle" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 955.0
margin/bottom = 40.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="HSeparator" type="HSeparator" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]

visibility/opacity = 0.3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 44.0
margin/right = 955.0
margin/bottom = 47.0
__meta__ = {
"_edit_lock_": true
}

[node name="entryContent" type="RichTextLabel" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 51.0
margin/right = 955.0
margin/bottom = 989.0
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="returnButton" type="Button" parent="Control/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 1043.0
margin/right = 1920.0
margin/bottom = 1080.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Retour"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="encyclopediaFunctions" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="Control/VBoxContainer/tabs/buttonToInventory" to="." method="_on_buttonToInventory_pressed"]

[connection signal="pressed" from="Control/VBoxContainer/tabs/buttonToLog" to="." method="_on_buttonToLog_pressed"]

[connection signal="pressed" from="Control/VBoxContainer/tabs/buttonToMap" to="." method="_on_buttonToMap_pressed"]

[connection signal="button_pressed" from="Control/VBoxContainer/HBoxContainer/Tree" to="." method="_on_Tree_button_pressed"]

[connection signal="cell_selected" from="Control/VBoxContainer/HBoxContainer/Tree" to="." method="_on_Tree_cell_selected"]

[connection signal="item_activated" from="Control/VBoxContainer/HBoxContainer/Tree" to="." method="_on_Tree_item_activated"]

[connection signal="item_selected" from="Control/VBoxContainer/HBoxContainer/Tree" to="." method="_on_Tree_item_selected"]

[connection signal="pressed" from="Control/VBoxContainer/returnButton" to="." method="_on_returnButton_pressed"]


